$Id: NEWS,v 1.255 2002-10-22 18:27:28 castaglia Exp $

1.2.7rc2 - Released 2002-10-22
---------------------------------
- Bug 1757 - non-ANSI Syntax in netio.c
- Bug 1735 - Proftpd 1.2.6 compiled on FreeBSD 4.6.2 exits on signal 11
- Bug 1759 - ftpwho shows much more connections than really is.  This bug
             only occurred for those daemons running in inetd mode.
- Bug 1769 - Lack of supplemental groups can cause segfault.  This bug is
             a result of the fix for Bug 1666.
- Bug 1770 - Forgetting to check for no IP in string. 
- Moved the switching to the User/Group for a vhost up in the order, to occur
  before any modules' session initialization callback is invoked.
- Bug 1644 - LogFormat local IP and FQDN tags missing.  Added %L to LogFormat
             meta sequences for logging local server IP address, and %V for
             logging local server FQDN.
- Bug 1785 - Bad handling of symlinks.  This bug appeared as a consequence
             of Bug#1486's fix, which involved caching of struct stats in
             order to effect a speed-up of directory listings.
- Bug 1778 - 1.2.7rc1 fails to link on OpenBSD 3.2-current.  The ftptop
             utility was not properly utilizing the macro detecting the
             presence (or absence) of the ncurses library.
- Adding new configure options (see configure --help) for setting some of
  the "tunable" values in options.h via the configure command.

1.2.7rc1 - Released 2002-10-01
---------------------------------
- Bug 1649 - setproctitle() prepends and appends process name
- Bug 1666 - Auth modules can return duplicate supplemental groups
- Bug 1654 - Add DESTDIR in Makefile
- Bug 1682 - Broken SyslogFacility requires custom syslog code
- Bug 1076 - Toggle parsing of .ftpaccess files with a AllowOverride
- Bug 1724 - AuthPAM off does not work beginning 1.2.5
- Bug 1593 - mod_sql doesn't cache failed uid lookups
- Bug 1719 - Add RFC2228 stuff to distribution
- Bug 1663 - Add SITE CHGRP command