@@ -204,6 +204,16 @@ AC_ARG_ENABLE(pool-size,
     AC_DEFINE_UNQUOTED(PR_TUNABLE_NEW_POOL_SIZE, $enableval,)
   ])
 
+AC_ARG_ENABLE(scoreboard-buffer-size,
+  [  --enable-scoreboard-buffer-size
+                          tune the the size (in bytes) of certain
+                          scoreboard buffers (default=80)
+  ],
+  [
+    AC_DEFINE_UNQUOTED(PR_TUNABLE_SCOREBOARD_BUFFER_SIZE, $enableval,)
+  ])
+
+
 AC_ARG_ENABLE(timeout-ident,
   [  --enable-timeout-ident
                           set the default timeout (in secs) for
@@ -618,7 +628,8 @@ fi
   esac
 fi
 
-AC_CHECK_LIB(ncurses, initscr, [LIBS="$LIBS -lncurses"])
+AC_CHECK_LIB(ncurses, initscr,
+  [LIBS="$LIBS -lncurses" ; AC_DEFINE(HAVE_LIBNCURSES)])
 
 dnl Check for various argv[] replacing functions on various OSs
 AC_CHECK_FUNCS(setproctitle)
